Make sure the empty batches of actions don't get sent to Azure storage tables
Since this causes errors